Fix spacing in cms popup

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -15,7 +15,7 @@
       }
       p {
         line-height: 20px;
-      padding: 7px 57px;
+      // padding: 7px 57px;
       text-align: center;
       font-size: 12px;
       }
@@ -462,16 +462,16 @@
 }
 
 .gc-tnc {
-  .heading {
-    margin-bottom: 15px;
-  }
+  // .heading {
+  //   margin-bottom: 15px;
+  // }
   .content {
-    padding: 7px 57px;
+    padding: 7px 50px;
     margin-bottom: 20px;
   }
   .icon {
-    max-height: 90px;
-    margin-top: 10px;
+    max-height: 60px;
+    margin-top: 20px;
   }
   .cerise-btn30 {
     width: 30%;
